--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "homepage": "https://github.com/PTHy/Fire_Detection_Server#readme",
   "dependencies": {
     "dotenv": "^6.2.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
     "http": "^0.0.0",
-    "socket.io": "^2.2.0"
+    "koa-views": "^6.1.5",
+    "path": "^0.12.7",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
